--- a/.github/workflows/failed.yml
+++ b/.github/workflows/failed.yml
@@ -1,7 +1,10 @@
 name: Failed
 
 on:
-  - pull_request
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   test:
